--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,10 @@ env:
   es2021: true
 extends:
   - airbnb-base
+  - "plugin:jest/recommended"
 parserOptions:
   ecmaVersion: 13
   sourceType: module
-rules: { no-console: off }
+rules:
+  no-console: off
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
