--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,8 +3,9 @@ env:
   es2021: true
 extends:
   - airbnb-base
-  - "plugin:jest/recommended"
+  - plugin:jest/recommended
   - plugin:import/recommended
+  - plugin:prettier/recommended
 parserOptions:
   ecmaVersion: 13
   sourceType: module
