--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "devDependencies": {
     "@jest/globals": "^27.4.4",
-    "eslint": "^8.5.0",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^25.3.2",
     "jest": "^27.4.5",
-    "jest-cli": "^27.4.5"
+    "jest-cli": "^27.4.5",
+    "prettier": "2.5.1"
   }
 }
