--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,5 +11,6 @@ parserOptions:
   sourceType: module
 rules:
   no-console: off
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
   import/extensions: [off]
+  quotes: single
