--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,3 +14,4 @@ rules:
   no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
   import/extensions: [off]
   prettier/prettier: [error, { singleQuote: true }]
+  import/namespace: ['error', { allowComputed: true }]
